--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -48,6 +48,6 @@ theme:
   classy: 0
   bartik: 0
   seven: 0
-profile: standard
+# profile: standard
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
